--- a/css/index.css
+++ b/css/index.css
@@ -159,15 +159,30 @@ h3 {
   max-width: 1024px;
   margin-left: auto;
   margin-right: auto;
+  /* Style inputs */
+  /* Style the container/contact section */
+  /* Create two columns that float next to eachother */
+  /* Clear floats after the columns */
+}
+@media (maxwidth: 500px) {
+  .container {
+    max-width: 500px;
+  }
 }
 .container .header-container {
   background-color: #8d9e94;
   max-width: 100%;
   height: 300px;
   display: flex;
-  border-bottom: 1px solid black;
   justify-content: space-evenly;
   align-items: flex-start;
+}
+@media (maxwidth: 500px) {
+  .container .header-container {
+    height: 100%;
+    display: flex;
+    flex-flow: column wrap;
+  }
 }
 .container .header-container .header-wrapper {
   width: 49%;
@@ -195,6 +210,7 @@ h3 {
 }
 .container .work-card.intro {
   width: 100%;
+  background-color: #e4e4e4;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
@@ -214,6 +230,13 @@ h3 {
   display: flex;
   justify-content: space-evenly;
 }
+@media (maxwidth: 500px) {
+  .container .content-body {
+    max-width: 100%;
+    display: flex;
+    flex-flow: column wrap-reverse;
+  }
+}
 .container .content-body .work-card.work {
   background-color: #9b9b9b;
   width: 39%;
@@ -223,6 +246,11 @@ h3 {
 .container .content-body .work-card.work h3,
 .container .content-body .work-card.work p {
   padding: 10px;
+}
+@media (maxwidth: 500px) {
+  .container .content-body .work-card.work {
+    width: 100%;
+  }
 }
 .container .content-body .work-card.work h2 {
   background-color: lavender;
@@ -247,6 +275,11 @@ h3 {
 .container .content-body .work-card.skills p {
   padding: 10px;
 }
+@media (maxwidth: 500px) {
+  .container .content-body .work-card.skills {
+    width: 100%;
+  }
+}
 .container .content-body .work-card.skills h1 {
   text-align: right;
 }
@@ -265,4 +298,47 @@ h3 {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   text-align: right;
+}
+.container input[type="text"],
+.container select,
+.container textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+.container input[type="submit"] {
+  background-color: #8d9e94;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+.container input[type="submit"]:hover {
+  background-color: #8d9e94;
+}
+.container .contact {
+  border-radius: 5px;
+  background-color: #e4e4e4;
+  padding: 50px;
+}
+.container .contact h2,
+.container .contact p {
+  padding: 5px;
+}
+.container .contact img {
+  opacity: 80%;
+}
+.container .column {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 20px;
+}
+.container .row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
