This commit fixes the line height of the paragraphs within the intro card and work/skills card. Making for an easier reading experience

--- a/css/index.css
+++ b/css/index.css
@@ -159,17 +159,8 @@ h3 {
   max-width: 1024px;
   margin-left: auto;
   margin-right: auto;
-  /* Style inputs */
-  /* Style the container/contact section */
-  /* Create two columns that float next to eachother */
-  /* Clear floats after the columns */
 }
-@media (maxwidth: 500px) {
-  .container {
-    max-width: 500px;
-  }
-}
-.container .header-container {
+.header-container {
   background-color: #8d9e94;
   max-width: 100%;
   height: 300px;
@@ -177,14 +168,7 @@ h3 {
   justify-content: space-evenly;
   align-items: flex-start;
 }
-@media (maxwidth: 500px) {
-  .container .header-container {
-    height: 100%;
-    display: flex;
-    flex-flow: column wrap;
-  }
-}
-.container .header-container .header-wrapper {
+.header-container .header-wrapper {
   width: 49%;
   height: 80%;
   display: flex;
@@ -193,36 +177,39 @@ h3 {
   justify-content: flex-start;
   margin-left: 100px;
 }
-.container .header-container .nav-wrapper {
+.header-container .nav-wrapper {
   width: 100%;
   display: flex;
   flex-flow: row-reverse nowrap;
   margin-right: 50px;
 }
-.container .header-container .nav-wrapper a {
+.header-container .nav-wrapper a {
   color: black;
   background-color: lavender;
   padding: 0 50px;
   border-top-left-radius: 5px;
 }
-.container .header-container h1 {
+.header-container h1 {
   font-size: 5rem;
 }
-.container .work-card.intro {
+.work-card.intro {
   width: 100%;
   background-color: #e4e4e4;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
-.container .work-card.intro h2,
-.container .work-card.intro h3,
-.container .work-card.intro p {
+.work-card.intro h2,
+.work-card.intro h3,
+.work-card.intro p {
   padding: 10px;
 }
-.container .work-card.intro h2 {
+.work-card.intro h2 {
   font-size: 3rem;
 }
-.container .content-body {
+.work-card.intro p {
+  line-height: 1.5;
+}
+.content-body {
   background-color: lightgrey;
   height: 100%;
   width: 100%;
@@ -230,60 +217,46 @@ h3 {
   display: flex;
   justify-content: space-evenly;
 }
-@media (maxwidth: 500px) {
-  .container .content-body {
-    max-width: 100%;
-    display: flex;
-    flex-flow: column wrap-reverse;
-  }
+.content-body p {
+  line-height: 1.25;
 }
-.container .content-body .work-card.work {
+.content-body .work-card.work {
   background-color: #9b9b9b;
   width: 39%;
   margin-top: 2%;
 }
-.container .content-body .work-card.work h2,
-.container .content-body .work-card.work h3,
-.container .content-body .work-card.work p {
+.content-body .work-card.work h2,
+.content-body .work-card.work h3,
+.content-body .work-card.work p {
   padding: 10px;
 }
-@media (maxwidth: 500px) {
-  .container .content-body .work-card.work {
-    width: 100%;
-  }
-}
-.container .content-body .work-card.work h2 {
+.content-body .work-card.work h2 {
   background-color: lavender;
   width: 50%;
   text-align: center;
   border-top-right-radius: 5px;
 }
-.container .content-body .work-card.work h3 {
+.content-body .work-card.work h3 {
   margin-top: 15px;
   background-color: lavender;
   width: 100%;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
-.container .content-body .work-card.skills {
+.content-body .work-card.skills {
   width: 39%;
   background-color: #9b9b9b;
   margin-top: 2%;
 }
-.container .content-body .work-card.skills h2,
-.container .content-body .work-card.skills h3,
-.container .content-body .work-card.skills p {
+.content-body .work-card.skills h2,
+.content-body .work-card.skills h3,
+.content-body .work-card.skills p {
   padding: 10px;
 }
-@media (maxwidth: 500px) {
-  .container .content-body .work-card.skills {
-    width: 100%;
-  }
-}
-.container .content-body .work-card.skills h1 {
+.content-body .work-card.skills h1 {
   text-align: right;
 }
-.container .content-body .work-card.skills h2 {
+.content-body .work-card.skills h2 {
   background-color: lavender;
   width: 50%;
   text-align: center;
@@ -291,7 +264,7 @@ h3 {
   justify-content: center;
   border-top-right-radius: 5px;
 }
-.container .content-body .work-card.skills h3 {
+.content-body .work-card.skills h3 {
   margin-top: 15px;
   background-color: lavender;
   width: 100%;
@@ -299,9 +272,10 @@ h3 {
   border-top-right-radius: 5px;
   text-align: right;
 }
-.container input[type="text"],
-.container select,
-.container textarea {
+/* Style inputs */
+input[type="text"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -309,35 +283,38 @@ h3 {
   margin-bottom: 16px;
   resize: vertical;
 }
-.container input[type="submit"] {
+input[type="submit"] {
   background-color: #8d9e94;
   color: white;
   padding: 12px 20px;
   border: none;
   cursor: pointer;
 }
-.container input[type="submit"]:hover {
+input[type="submit"]:hover {
   background-color: #8d9e94;
 }
-.container .contact {
+/* Style the container/contact section */
+.contact {
   border-radius: 5px;
   background-color: #e4e4e4;
   padding: 50px;
 }
-.container .contact h2,
-.container .contact p {
+.contact h2,
+.contact p {
   padding: 5px;
 }
-.container .contact img {
+.contact img {
   opacity: 80%;
 }
-.container .column {
+/* Create two columns that float next to eachother */
+.column {
   float: left;
   width: 50%;
   margin-top: 6px;
   padding: 20px;
 }
-.container .row:after {
+/* Clear floats after the columns */
+.row:after {
   content: "";
   display: table;
   clear: both;
