Changed the font for the placeholders and labels for contact form to match with the font theme for the rest of the project

--- a/less/index.less
+++ b/less/index.less
@@ -191,6 +191,7 @@ h3 {
   margin-right: auto;
   // 500px-------------
 }
+
 //--header-container--------------------------------------------------------
 
 .header-container {
@@ -202,34 +203,33 @@ h3 {
   justify-content: space-evenly;
   align-items: flex-start;
   // 500px------------------------
+}
+.header-wrapper {
+  width: 49%;
+  height: 80%;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-end;
+  justify-content: flex-start;
+  margin-left: 100px;
+}
 
-  .header-wrapper {
-    width: 49%;
-    height: 80%;
-    display: flex;
-    flex-flow: row wrap;
-    align-items: flex-end;
-    justify-content: flex-start;
-    margin-left: 100px;
+.nav-wrapper {
+  width: 100%;
+  display: flex;
+  flex-flow: row-reverse nowrap;
+  margin-right: 50px;
+
+  a {
+    color: black;
+    background-color: @bgbutton;
+    padding: 0 50px;
+    border-top-left-radius: 5px;
   }
+}
 
-  .nav-wrapper {
-    width: 100%;
-    display: flex;
-    flex-flow: row-reverse nowrap;
-    margin-right: 50px;
-
-    a {
-      color: black;
-      background-color: @bgbutton;
-      padding: 0 50px;
-      border-top-left-radius: 5px;
-    }
-  }
-
-  h1 {
-    font-size: 5rem;
-  }
+h1 {
+  font-size: 5rem;
 }
 
 //----INTRO SECTION---------------------------------------------------------------
@@ -315,6 +315,7 @@ h3 {
   }
 }
 // CONTACT FORM --------standard css-------
+
 /* Style inputs */
 input[type="text"],
 select,
@@ -325,6 +326,7 @@ textarea {
   margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical;
+  font-family: @font;
 }
 
 input[type="submit"] {
@@ -368,4 +370,8 @@ input[type="submit"]:hover {
   content: "";
   display: table;
   clear: both;
+}
+
+label {
+  font-family: @font;
 }
