--- a/css/index.css
+++ b/css/index.css
@@ -168,7 +168,7 @@ h3 {
   justify-content: space-evenly;
   align-items: flex-start;
 }
-.header-container .header-wrapper {
+.header-wrapper {
   width: 49%;
   height: 80%;
   display: flex;
@@ -177,19 +177,19 @@ h3 {
   justify-content: flex-start;
   margin-left: 100px;
 }
-.header-container .nav-wrapper {
+.nav-wrapper {
   width: 100%;
   display: flex;
   flex-flow: row-reverse nowrap;
   margin-right: 50px;
 }
-.header-container .nav-wrapper a {
+.nav-wrapper a {
   color: black;
   background-color: lavender;
   padding: 0 50px;
   border-top-left-radius: 5px;
 }
-.header-container h1 {
+h1 {
   font-size: 5rem;
 }
 .work-card.intro {
@@ -282,6 +282,7 @@ textarea {
   margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical;
+  font-family: "Oswald", "sans-serif";
 }
 input[type="submit"] {
   background-color: #8d9e94;
@@ -318,4 +319,7 @@ input[type="submit"]:hover {
   content: "";
   display: table;
   clear: both;
+}
+label {
+  font-family: "Oswald", "sans-serif";
 }
