--- a/less/index.less
+++ b/less/index.less
@@ -200,38 +200,47 @@ h3 {
   max-width: 100%;
   height: 300px;
   display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  flex-flow: column nowrap;
+  justify-content: center;
+  @media screen and (max-width: 500px) {
+    height: 500px;
+    flex-flow: column-reverse nowrap;
+  }
   // 500px------------------------
-}
-.header-wrapper {
-  width: 49%;
-  height: 80%;
-  display: flex;
-  flex-flow: row wrap;
-  align-items: flex-end;
-  justify-content: flex-start;
-  margin-left: 100px;
-}
 
-.nav-wrapper {
-  width: 100%;
-  display: flex;
-  flex-flow: row-reverse nowrap;
-  margin-right: 50px;
+  .header-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
 
-  a {
-    color: black;
-    background-color: @bgbutton;
-    padding: 0 50px;
-    border-top-left-radius: 5px;
+    @media screen and (max-width: 500px) {
+      flex-flow: row wrap;
+    }
+
+    p {
+      font-size: 1.5rem;
+    }
+  }
+
+  .nav-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+
+    a {
+      color: black;
+      background-color: @bgbutton;
+      padding: 0 50px;
+      border-top-left-radius: 5px;
+    }
+  }
+
+  h1 {
+    font-size: 5rem;
   }
 }
-
-h1 {
-  font-size: 5rem;
-}
-
 //----INTRO SECTION---------------------------------------------------------------
 .work-card.intro {
   width: 100%;
