--- a/less/index.less
+++ b/less/index.less
@@ -160,7 +160,7 @@ table {
 
 @desktop: ~"only screen and (min-width: 960px) and (max-width: 1199px)";
 @tablet: ~"only screen and (min-width: 720px) and (max-width: 959px)";
-@mobile: ~"(maxwidth: 500px)";
+@mobile: ~"screen and (max-width: 500px)";
 
 /* Set every element's box-sizing to border-box */
 * {
@@ -202,10 +202,6 @@ h3 {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  @media screen and (max-width: 500px) {
-    height: 500px;
-    flex-flow: column-reverse nowrap;
-  }
   // 500px------------------------
 
   .header-wrapper {
@@ -214,11 +210,9 @@ h3 {
     display: flex;
     justify-content: space-around;
     align-items: baseline;
-
-    @media screen and (max-width: 500px) {
+    @media @mobile {
       flex-flow: row wrap;
     }
-
     p {
       font-size: 1.5rem;
     }
@@ -228,29 +222,37 @@ h3 {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+  }
 
-    a {
-      color: black;
-      background-color: @bgbutton;
-      padding: 0 50px;
-      border-top-left-radius: 5px;
+  a {
+    color: #666666;
+    background-color: @bgbutton;
+    padding: 0 50px;
+    border-top-left-radius: 5px;
+
+    @media @mobile {
+      padding: 0 10px;
     }
   }
-
-  h1 {
-    font-size: 5rem;
-  }
 }
+
+h1 {
+  font-size: 5rem;
+}
+
 //----INTRO SECTION---------------------------------------------------------------
 .work-card.intro {
   width: 100%;
   background-color: @alternate;
-
   .heading-style();
   .card-spacing();
 
   h2 {
     font-size: 3rem;
+    @media @mobile {
+      font-size: 1.5rem;
+      text-align: center;
+    }
   }
 
   p {
@@ -267,6 +269,7 @@ h3 {
   width: 100%;
   margin-top: 5px;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-evenly;
 
   p {
@@ -277,8 +280,10 @@ h3 {
     background-color: @bgcard;
     width: 39%;
     margin-top: 100% - 98%;
-
     .card-spacing();
+    @media @mobile {
+      width: 100%;
+    }
 
     h2 {
       background-color: @bgbutton;
@@ -300,6 +305,9 @@ h3 {
     background-color: @bgcard;
     margin-top: 100% - 98%;
     .card-spacing();
+    @media @mobile {
+      width: 100%;
+    }
 
     h1 {
       text-align: right;
