--- a/css/index.css
+++ b/css/index.css
@@ -169,15 +169,19 @@ h3 {
   justify-content: center;
 }
 .header-container .header-wrapper {
-  width: 100%;
+  width: 500px;
   height: 100%;
   display: flex;
   justify-content: space-around;
+  flex-flow: row wrap;
   align-items: baseline;
+  text-align: center;
+  margin: auto;
+  padding-top: 5px;
 }
 @media screen and (max-width: 500px) {
   .header-container .header-wrapper {
-    flex-flow: row wrap;
+    max-width: 80%;
   }
 }
 .header-container .header-wrapper p {
@@ -188,15 +192,20 @@ h3 {
   display: flex;
   justify-content: space-evenly;
 }
-.header-container a {
+@media screen and (max-width: 500px) {
+  .header-container .nav-wrapper {
+    width: 100%;
+  }
+}
+.header-container .nav-wrapper a {
   color: #666666;
   background-color: lavender;
   padding: 0 50px;
   border-top-left-radius: 5px;
 }
 @media screen and (max-width: 500px) {
-  .header-container a {
-    padding: 0 10px;
+  .header-container .nav-wrapper a {
+    padding: 0 15px;
   }
 }
 h1 {
@@ -238,7 +247,7 @@ h1 {
   line-height: 1.25;
 }
 .content-body .work-card.work {
-  background-color: #9b9b9b;
+  background-color: #8d9e94;
   width: 39%;
   margin-top: 2%;
 }
@@ -267,7 +276,7 @@ h1 {
 }
 .content-body .work-card.skills {
   width: 39%;
-  background-color: #9b9b9b;
+  background-color: #8d9e94;
   margin-top: 2%;
 }
 .content-body .work-card.skills h2,
@@ -349,4 +358,46 @@ input[type="submit"]:hover {
 }
 label {
   font-family: "Oswald", "sans-serif";
+}
+/* GALLERY PORTFOLIO */
+html,
+body {
+  height: 100%;
+  margin: 20px;
+}
+p {
+  font-family: "Hind", "sans-serif";
+}
+h1,
+.nav-wrapper a,
+h2,
+h3 {
+  font-family: "Oswald", "sans-serif";
+  text-decoration: none;
+}
+.gallery-container {
+  max-width: 1024px;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #e4e4e4;
+}
+.gallery-container .images {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.gallery-container .gallery-card {
+  height: 300px;
+  width: 30%;
+  border: 1px solid black;
+  margin-top: 20px;
+}
+.footer-container {
+  max-width: 1024px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #8d9e94;
 }
